Change input hours to register parkings and set schedule's correct format to users

--- a/front/src/app/stats-crear-estacionamiento/stats-crear-estacionamiento.component.html
+++ b/front/src/app/stats-crear-estacionamiento/stats-crear-estacionamiento.component.html
@@ -44,12 +44,12 @@
           </div>
           <div class="row">
             <label style="float: left;">Hora de Entrada </label>
-            <input class="form-control m-1" type="datetime-local" placeholder="Ingrese la Hora de Entrada"
+            <input class="form-control m-1" type="time" placeholder="Ingrese la Hora de Entrada"
               [(ngModel)]="parkinglot.schedule.startHour">
           </div>
           <div class="row">
             <label style="float: left;">Hora de Salida (opcional)</label>
-            <input class="form-control m-1" type="datetime-local" placeholder="Ingrese la Hora de Salida"
+            <input class="form-control m-1" type="time" placeholder="Ingrese la Hora de Salida"
               [(ngModel)]="parkinglot.schedule.endHour">
           </div>
           <div class="row">
