--- a/front/src/app/stats-funcionarios/stats-funcionarios.component.html
+++ b/front/src/app/stats-funcionarios/stats-funcionarios.component.html
@@ -36,7 +36,7 @@
             {{p}}
           </tr>
         </td>
-        <td><button class="btn btn-normal btn-sm m-4" (click)=Detalle(e)> Ver Detalles </button></td>
+        <td><button class="btn btn-normal btn-sm m-4" (click)=Detalle(e.id)> Ver Detalles </button></td>
       </tr>
     </tbody>
   </table>
