Fix second email in profile view

--- a/front/src/app/perfil/perfil.component.html
+++ b/front/src/app/perfil/perfil.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="card-body p-4">
         <label>Correo secundario</label>
-        <input class="form-control" style="margin-bottom: 2%;" type="email" placeholder="Ingrese el correo secundario">
+        <input class="form-control" style="margin-bottom: 2%;" [(ngModel)]="user.secondEmail" type="email" placeholder="Ingrese el correo secundario">
         <div class="form" style="margin-bottom: 2%;">
           <form class="row g-3">
             <div class="col-auto">
