Redirect to home in profile view

--- a/front/src/app/perfil/perfil.component.html
+++ b/front/src/app/perfil/perfil.component.html
@@ -54,7 +54,7 @@
           </form>
         </div>
         <button class="btn btn-success btn-block" (click)=Update()> Actualizar perfil</button>
-        <label>Volver al menú de Inicio <a [routerLink]="['/payroll']">Inicio</a></label>
+        <label>Volver al menú de Inicio <a [routerLink]="['/home']">Inicio</a></label>
       </div>
     </div>
   </div>
