--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -8,6 +8,9 @@
 <div class="header">
     <h1>Bienvenido a ParTec</h1> 
 </div>
+<div class="container2 mt - 2">
+  <button class="btn btn-warning btn-lg m-5" (click) = logout()> Cerrar Sesión </button>
+</div>
 <div class= "container">
     <div class="card text-center">
       <div class="card-header">
