reserve history for standar profile and admin

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -20,6 +20,7 @@
   
         <button class="btn btn-primary btn-lg m-4" *ngIf="this.isAdmin" (click) = Consultar()> Consultas</button>
         <button class="btn btn-primary btn-lg m-4" (click) = Reservar()> Reservar </button>
+        <button class="btn btn-primary btn-lg m-4" (click) = Historial()> Historial de Reservas </button>
         <button class="btn btn-primary btn-lg m-4" *ngIf="this.isAdmin" (click) = Planilla()> Planilla </button>
         <button class="btn btn-primary btn-lg m-4" (click) = Perfil()> Perfil </button>
   
