--- a/front/src/app/reserve-visitor/reserve-visitor.component.html
+++ b/front/src/app/reserve-visitor/reserve-visitor.component.html
@@ -48,7 +48,7 @@
    
         <button class="btn btn-primary btn-block m-4" (click)= Reservar()> Reservar </button>
 
-        <label><a [routerLink]="['/home']">Volver</a></label>
+        <label><a [routerLink]="['/reservehistoryvisitor']">Volver</a></label>
       </div>
     </div>
   
