some progress in report Operator

--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -22,6 +22,7 @@
         <button class="btn btn-primary btn-lg m-4" (click) = Reservar()> Reservar </button>
         <button class="btn btn-primary btn-lg m-4" (click) = Historial()> Historial de Reservas </button>
         <button class="btn btn-primary btn-lg m-4" (click) = Visitante() style="display:none" id="visitantes"> Visitantes</button>
+        <button class="btn btn-primary btn-lg m-4" (click) = ConsultaOperador() style="display:none" id="operador"> Consultar Parking</button>
         <button class="btn btn-primary btn-lg m-4" *ngIf="this.isAdmin" (click) = Planilla()> Planilla </button>
         <button class="btn btn-primary btn-lg m-4" (click) = Perfil()> Perfil </button>  
       </div>
