--- a/front/src/app/stats-franja/stats-franja.component.html
+++ b/front/src/app/stats-franja/stats-franja.component.html
@@ -19,3 +19,10 @@
         <div id="day">viernes</div>
         <div id="day">sabado</div>
     </div>
+
+    <div id="graph" class="grid-container">
+        <div class="div-1" >0-25% lleno </div>
+        <div class="div-2" >25-50% lleno</div>
+        <div class="div-3" >50-75% lleno</div>
+        <div class="div-4" >75-100% lleno</div>
+    </div>
